--- a/index.html
+++ b/index.html
@@ -8,45 +8,48 @@
     <link rel="stylesheet" href="assets/dist/style.css">
 </head>
 <body class="font-roboto">
-    <header class="h-10 flex justify-end items-center">
+    <header class="hidden lg:flex h-10 justify-end items-center">
         <nav class="flex justify-end items-center pr-[10%] gap-3">
             <ul class="list-none flex gap-3 ">
-                <li><a class="border-t-violet-700 border-t-4 text-violet-700 hover:font-robotob hover:underline" href="">ACCUEIL</a></li>
-                <li><a class="hover:font-robotob hover:underline" href="">BUSINESS SCHOOL</a></li>
-                <li><a class="hover:font-robotob hover:underline" href="">ECOLE ESPORT</a></li>
-                <li><a class="hover:font-robotob hover:underline" href="">COURS DE JEUX VIDEOS</a></li>
-                <li><a class="hover:font-robotob hover:underline" href="">LE CAMPUS</a></li>
-                <li><a class="hover:font-robotob hover:underline" href="">NEWSROOM</a></li>
-                <li><a class="hover:font-robotob hover:underline" href="">PARENTS</a></li>
+                <li><a class="border-t-violet-700 border-t-4 text-violet-700  hover:underline" href="">ACCUEIL</a></li>
+                <li><a class="hover:underline" href="">BUSINESS SCHOOL</a></li>
+                <li><a class="hover:underline" href="">ECOLE ESPORT</a></li>
+                <li><a class="hover:underline" href="">COURS DE JEUX VIDEOS</a></li>
+                <li><a class="hover:underline" href="">LE CAMPUS</a></li>
+                <li><a class="hover:underline" href="">NEWSROOM</a></li>
+                <li><a class="hover:underline" href="">PARENTS</a></li>
             </ul>
             <div class=" bg-gray-200 p-1 rounded-xl">
-                <a class="hover:font-robotob hover:underline" class="border-r-2 border-black pr-1" href="">FR</a>
-                <a class="hover:font-robotob hover:underline" class=" " href="">EN</a>
+                <a class=" hover:underline" class="border-r-2 border-black pr-1" href="">FR</a>
+                <a class=" hover:underline" class=" " href="">EN</a>
             </div>
 
         </nav>
     </header>
 
     <section id="banner" class="bg-black flex flex-col gap-3 items-center p-10">
+        <div class="menu w-5 self-end bg-black lg:hidden">
+            <img class="w-full " src="assets/img/bars-solid.svg" alt="">
+        </div>
         <div class="w-[40%]">
-            <a href=""><img class="w-full hover:border-b-4 hover:border-sky-500" src="assets/img/logo-gc-hero.png" alt=""></a>
+            <img class="w-full" src="assets/img/logo-gc-hero.png" alt="">
         </div>
         <h3 class="text-gray-500 text-md tracking-widest">PASSION. PROFESSIONNALISME. PERFORMANCE.</h3>
-        <a class="text-gray-300  mt-3 border-white border p-2 pr-6 pl-6 mb-6 hover:font-robotob hover:underline" href="">GAMING CAMPUS EN VIDEO ></a>
+        <a class="text-gray-300  mt-3 border-white border p-2 pr-6 pl-6 mb-6  hover:underline" href="">GAMING CAMPUS EN VIDEO ></a>
     </section>
 
-    <section id="banner-blanche" class="flex justify-center items-center p-5">
+    <section id="banner-blanche" class="flex justify-center items-center p-16">
         <p class="w-[60%] text-center">Imaginé par des professionnels des jeux vidéos et de l'éducation, Gaming Campus est un lieu unique pour révéler les talents et développer les compétences.</p>
     </section>
 
-    <section id="savoir-plus" class="bg-black text-white p-20 flex justify-center gap-5">
+    <section id="savoir-plus" class="bg-black text-white p-20 flex flex-col lg:flex-row justify-center gap-5">
         <div class="savoir-container flex items-center gap-5 flex-col text-center">
             <div class="img w-[60%]">
                 <img class="w-full " src="assets/img/logo-gbs-home.png" alt="">
             </div>
             <h3><strong>GAMING BUSINESS SCHOOL</strong></h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo.</p>
-            <a class="hover:font-robotob hover:underline" class="border-white border  p-2 pr-6 pl-6 hover:bg-red-500 hover:p-3" href="">EN SAVOIR PLUS</a>
+            <a class=" hover:underline" class="border-white border  p-2 pr-6 pl-6 hover:bg-red-500 hover:p-3" href="">EN SAVOIR PLUS</a>
         </div>
 
         <div class="savoir-container flex items-center gap-5 flex-col text-center">
@@ -55,7 +58,7 @@
             </div>
             <h3><strong>GAMING ACADEMY</strong></h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo.</p>
-            <a class="hover:font-robotob hover:underline" class="border-white border  p-2 pr-6 pl-6 href=">EN SAVOIR PLUS</a>
+            <a class=" hover:underline" class="border-white border  p-2 pr-6 pl-6 href=">EN SAVOIR PLUS</a>
         </div>
 
         <div class="savoir-container flex items-center gap-5 flex-col text-center">
@@ -64,27 +67,27 @@
             </div>
             <h3><strong>GAMING GURU</strong></h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo.</p>
-            <a class="hover:font-robotob hover:underline" class="border-white border  p-2 pr-4 pl-4 href=">EN SAVOIR PLUS</a>
+            <a class=" hover:underline" class="border-white border  p-2 pr-4 pl-4 href=">EN SAVOIR PLUS</a>
         </div>
     </section>
 
     <section id="news" class="bg-gray-50 pl-[15%] pr-[15%] pb-[10%]">
-        <div class="flex items-center justify-between mb-10 pt-16">
+        <div class="flex flex-col lg:flex-row items-center justify-between mb-10 pt-16">
             <div>
                 <h2 class="tracking-widest text-3xl">LES NEWS DU CAMPUS</h2>
                 <p class="">Suivez l'actualité de Gaming Campus, de G.Guru, G.B.S et G.Academy.</p>
             </div>
-            <a class="hover:font-robotob hover:underline" class="border-black border p-2 pr-6 pl-6 text-md font-robotob" href="">LA NEWSROOM ></a>
+            <a class=" hover:underline" class="border-black border p-2 pr-6 pl-6 text-md font-robotob" href="">LA NEWSROOM ></a>
         </div>
 
-        <div class="news-parent flex gap-20">
+        <div class="news-parent flex flex-col lg:flex-row gap-20">
             <div class="news flex flex-col gap-3">
                 <div class="img w-[100%]">
                     <img class="w-full shadow-xl shadow-black " src="assets/img/inauguration_gaming_campus_photo.jpg" alt="">
                 </div>
                 <h3 class="font-robotob text-md mt-3">Réunion d'information 19 décembre</h3>
                 <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
-                <a class=" text-violet-700 hover:font-robotob hover:underline" href="">SUR INSCRIPTION ></a>
+                <a class=" text-violet-700  hover:underline" href="">SUR INSCRIPTION ></a>
             </div>
 
             <div class="news flex flex-col gap-3">
@@ -93,7 +96,7 @@
                 </div>
                 <h3 class="font-robotob text-md mt-3">Réunion d'information 19 décembre</h3>
                 <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
-                <a class=" text-violet-700 hover:font-robotob hover:underline" href="">SUR INSCRIPTION ></a>
+                <a class=" text-violet-700  hover:underline" href="">SUR INSCRIPTION ></a>
             </div>
 
             <div class="news flex flex-col gap-3">
@@ -102,42 +105,42 @@
                 </div>
                 <h3 class="font-robotob text-md mt-3">Réunion d'information 19 décembre</h3>
                 <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
-                <a class=" text-violet-700 hover:font-robotob hover:underline" href="">SUR INSCRIPTION ></a>
+                <a class=" text-violet-700  hover:underline" href="">SUR INSCRIPTION ></a>
             </div>
         </div>
     </section>
 
     <footer id="info">
         <div>
-            <div class="info-parent1 flex justify-center pt-10 gap-28">
+            <div class="info-parent1 flex flex-col items-center md:flex-row justify-center pt-10 gap-28">
                 <div class="logo">
-                    <a href=""><img class="hover:border-b-4 hover:border-sky-500" src="assets/img/logo-gc-footer.jpg" alt=""></a>
+                    <a href=""><img class="hover:border-b hover:border-sky-500" src="assets/img/logo-gc-footer.jpg" alt=""></a>
                 </div>
                 <div class="pratique">
                     <h3 class="font-robotob text-md">INFOS PRATIQUES</h3>
                     <ul class="list-none leading-">
-                        <li><a class="hover:font-robotob hover:underline" class="" href="">Gaming Business School</a></li>
-                        <li><a class="hover:font-robotob hover:underline" class="" href="">Gaming Academy</a></li>
-                        <li><a class="hover:font-robotob hover:underline" class="" href="">Gaming Guru</a></li>
-                        <li><a class="hover:font-robotob hover:underline" class="" href="">Recrutement</a></li>
-                        <li><a class="hover:font-robotob hover:underline" class="" href="">Investisseurs</a></li>
-                        <li><a class="hover:font-robotob hover:underline" class="" href="">Mentions légales</a></li>
-                        <li><a class="hover:font-robotob hover:underline" class="" href="">C.G.U</a></li>
+                        <li><a class=" hover:underline" class="" href="">Gaming Business School</a></li>
+                        <li><a class=" hover:underline" class="" href="">Gaming Academy</a></li>
+                        <li><a class=" hover:underline" class="" href="">Gaming Guru</a></li>
+                        <li><a class=" hover:underline" class="" href="">Recrutement</a></li>
+                        <li><a class=" hover:underline" class="" href="">Investisseurs</a></li>
+                        <li><a class=" hover:underline" class="" href="">Mentions légales</a></li>
+                        <li><a class=" hover:underline" class="" href="">C.G.U</a></li>
                     </ul>
                 </div>
                 <div class="parents">
                     <h3 class="font-robotob text-md">PARENTS</h3>
                     <ul class="list-none w-36 leading-3">
-                        <li><a class="hover:font-robotob hover:underline" class="" href="">Questions / réponses pour vous accompagnez dans votre réflexion sur l'orientation de votre enfant et le choix de Gaming Campus</a></li>
-                        <li class="pt-5"><a class="hover:font-robotob hover:underline" class="" href="">En savoir plus</a></li>
+                        <li><a class=" hover:underline" class="" href="">Questions / réponses pour vous accompagnez dans votre réflexion sur l'orientation de votre enfant et le choix de Gaming Campus</a></li>
+                        <li class="pt-5"><a class=" hover:underline" class="" href="">En savoir plus</a></li>
                     </ul>
                 </div>
                 <div class="contact flex flex-col gap-5 ">
                     
                     <ul class="list-none">
                         <h3 class="font-robotob text-md">NOUS CONTACTER</h3>
-                        <li><a class="hover:font-robotob hover:underline" class="" href="">Tél: 00 00 00 00 00</a></li>
-                        <li><a class="hover:font-robotob hover:underline" class="" href="">cotnact@gzfmajd.fr</a></li>
+                        <li><a class=" hover:underline" class="" href="">Tél: 00 00 00 00 00</a></li>
+                        <li><a class=" hover:underline" class="" href="">cotnact@gzfmajd.fr</a></li>
                         <h3 class="font-robotob text-md pt-3">NOUS SUIVRE</h3>
                         <div class="flex gap-[7%]">
                             <div class="partenaire-img w-3">
