--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div>
             <div class="info-parent1 flex flex-col items-center md:flex-row justify-center pt-10 gap-28">
                 <div class="logo">
-                    <a href=""><img class="hover:border-b hover:border-sky-500" src="assets/img/logo-gc-footer.jpg" alt=""></a>
+                    <a href=""><img class="pb-2 hover:bg-sky-500" src="assets/img/logo-gc-footer.jpg" alt=""></a>
                 </div>
                 <div class="pratique">
                     <h3 class="font-robotob text-md">INFOS PRATIQUES</h3>
@@ -163,7 +163,7 @@
                     <p class="">Copyright 2018 Gaming Campus <br> Tous droits réservés</p>
                 </div>
             </div>
-            <div class="info-parent2 flex justify-center items-center gap-6 pt-10 border-t border-gray-400 mt-10">
+            <div class="info-parent2 flex flex-col sm:flex-row justify-center items-center gap-6 pt-10 border-t border-gray-400 mt-10">
                 <div class="ils-parlent">
                     <h3 class="font-robotob">ILS PARLENT DE NOUS</h3>
                     <p>Voir toutes les retombées presse.</p>
